--- a/styles.css
+++ b/styles.css
@@ -187,10 +187,11 @@ ul:nth-of-type(1) li strong{
 
 .photo img{
   width:100%;
-  height:240px;
-  object-fit:cover;
+  height:auto;
   display:block;
+  object-fit:contain;
   filter: grayscale(1) contrast(1.08) brightness(.92);
+  background: rgba(0,0,0,.25);
 }
 
 .photo__cap{
