--- a/styles.css
+++ b/styles.css
@@ -390,6 +390,8 @@ body::after{
 /* make cards breathe a bit more */
 .archive .card{
   padding: 18px 18px 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* paragraphs a bit nicer */
