--- a/styles.css
+++ b/styles.css
@@ -443,6 +443,7 @@ body::after{
 
 .evidence img{
   width:100%;
+  height:auto;
   display:block;
   filter: grayscale(1) contrast(1.05) brightness(.92);
 }
