--- a/styles.css
+++ b/styles.css
@@ -457,15 +457,12 @@ body::after{
 }
 
 .video{
-  position: relative;
-  padding-top: 56.25%;
-  overflow: hidden;
+  width: 100%;
   border-bottom: 1px solid rgba(255,255,255,.10);
 }
-.video iframe{
-  position: absolute;
-  inset: 0;
-  width:100%;
-  height:100%;
-  filter: grayscale(1) contrast(1.06) brightness(.90);
+
+.video video{
+  width: 100%;
+  display: block;
 }
+
